<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conta Pontos Dominó</string>
    <string name="btEntrar">Entrar</string>
    <string name="btCadastrar">Cadastrar Grupo</string>
    <string name="Acesso1">Cadastrar</string>
    <string name="btEsqueciSenhaGrupo">Esqueci</string>
    <string name="btLembrarSenhaGrupo">Lembrar</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Configurações</string>
    <string name="action_removeCat">Remover Ponto</string>
    <string name="action_backup">Backup</string>
    <string name="action_export">Exportar</string>
    <string name="action_mode_online">On-line</string>
    <string name="user">Usuário</string>
    <string name="Grupo">Grupo</string>
    <string name="Senha">Senha</string>
    <string name="CadastrarSenha">Cadastrar Senha</string>
    <string name="ConfirmarSenha">Confirmar Senha</string>
    <string name="nomeGrupo">Grupo</string>
    <string name="EsquecinomeGrupo">Nome do Grupo</string>
    <string name="CadastronomeGrupo">Nome do Grupo</string>
    <string name="CadastronomeJogador">Nome</string>
    <string name="CadastrarTelefoneContatoGrupo">Telefone Grupo(Responsável)</string>
    <string name="CadastrarTelefoneContatoJogador">Telefone</string>
    <string name="CadastrarEmailJogador">E-mail</string>
    <string name="enderecoGrupo">Endereco Grupo</string>
    <string name="criadorGrupo">Criador Grupo</string>
    <string name="telefoneGrupo">Tel. Criador</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="btSalvarCadastroGrupo">Salvar</string>
    <string name="btSalvarCadastroJogador">Salvar</string>
    <string name="btImportarContatoAgenda">Importar Contato Telefone</string>
    <string name="btImportarJogador">Importar jogador</string>
    <string name="title_activity_grupo_inicio">Grupo</string>
    <string name="btMarcarGato">Marcar Gato</string>
    <string name="btCadastrarJogador">Adicionar Jogador</string>
    <string name="btCheckPoint">Marcar ponto</string>
    <string name="btPointsDay">Resumo hoje</string>
    <string name="title_activity_cadastro_grupo">Cadastro de Grupo</string>
    <string name="title_activity_cadastro_jogador">Cadastro de Jogador</string>
    <string name="title_activity_marcar_gato">Marcar Gato</string>
    <string name="title_activity_esqueci_senha_grupo">Esqueci Senha</string>
    <string name="enviarEmail">Enviar e-mail</string>
    <string name="enviarSms">Enviar SMS</string>
    <string name="confirmeTelefone">Confirme o Telefone</string>
    <string name="title_activity_contatos_importar">Importar Contatos da Agenda</string>
    <string name="title_activity_point">Marcar Ponto</string>
    <string name="title_activity_edit_partida">Editar partida</string>
    <string name="desc_activity_edit_partida">Editar</string>
    <string name="title_activity_consulta_jogador">Consultar Jogador</string>
    <string name="title_activity_consultar_credito_debito">Consultar Crédito ou Débito</string>
    <string name="title_activity_remover_ponto">Remover Ponto</string>
    <string name="title_activity_pontos_perido">Pontos por período</string>
    <string name="tvCodeCat">Código do Ponto</string>
    <string name="tvRemovePoint">Remover Ponto</string>
    <string name="btDelete">Excluir</string>
    <string name="tvPlacar">Placar:</string>
    <string name="info_successExport">Os arquivos foram exportados com sucesso para o cartão de memória.</string>
    <string name="info_notBackup">Não foi possível fazer o backup do banco de dados.</string>
    <string name="info_successBackup">O backup do banco de dados foi gerado com sucesso.</string>
    <string name="title_activity_consulta_ponto_jogador">ConsultaPontoJogadorActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_consultar_pontos_dia">Ranking do dia</string>
    <string name="title_activity_cat_details">Gatos detalhados</string>
    <string name="seach_cat">Consultar Gatos</string>
    <string name="out">Sair</string>
    <string name="log_out">Logoff</string>
    <string name="send_print">Enviar print</string>
    <string name="title_activity_ranking_cat">Ranking de Gatos</string>
    <string name="title_activity_grafico_pontos_dia">Pontos Por Dia</string>
    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
    <string name="new_series">New series</string>
    <string name="points">Pontos</string>
    <string name="winners">Campeões</string>
    <string name="title_activity_partidas_mes">Partidas do mês</string>
    <string name="title_won">Vencedores</string>
    <string name="title_lose">Perdedores</string>
    <string name="bt_pointsDayStart">Início</string>
    <string name="bt_pointsDayEnd">Fim</string>
    <string name="bt_pointsDay_go">Pesquisar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="ok">OK</string>
</resources>
