<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:paddingTop="40dp"
    android:layout_gravity="center">
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingBottom="30dp">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />
    </TableRow>
    <TableRow
        android:id="@+id/linha1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
    <TableRow
        android:id="@+id/linha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <AutoCompleteTextView
            android:id="@+id/etUser"
            android:layout_width="250dp"
            android:ems="10"
            android:layout_height="50dp"
            android:inputType="text" >
        </AutoCompleteTextView>
    </TableRow>
    <TableRow
        android:id="@+id/linha3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Senha"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
    <TableRow
        android:id="@+id/linha4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/etPwd"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            />
    </TableRow>
    <TableRow
        android:id="@+id/linha5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    <Button
        android:id="@+id/btEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btEntrar"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:onClick="evtBtEntrar" />
    </TableRow>
    <TableRow
        android:id="@+id/linha6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/TextView01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Acesso1"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/tvCreateUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="gravity"
            android:text="@string/btEsqueciSenhaGrupo"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>
    <TableRow
        android:id="@+id/linha7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <Switch
            android:id="@+id/switchModeOperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/action_mode_online"/>
    </TableRow>
</TableLayout>
