<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"    
    android:paddingTop="40dp"
    android:layout_gravity="center"      
     >

    <TableRow
        android:id="@+id/linha1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="@string/EsquecinomeGrupo"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:id="@+id/linha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <AutoCompleteTextView
            android:id="@+id/etNomeGrupo"            
            android:layout_width="250dp"            
            android:ems="10"
            android:layout_height="50dp"            
            android:inputType="text" >            
        </AutoCompleteTextView>        
    </TableRow>
    <TableRow
        android:id="@+id/linha3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="@string/confirmeTelefone"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </TableRow>

    <TableRow
        android:id="@+id/linha4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <AutoCompleteTextView
            android:id="@+id/etTelefone"            
            android:layout_width="250dp"            
            android:ems="10"
            android:layout_height="50dp"            
            android:inputType="text" >            
        </AutoCompleteTextView>        
    </TableRow>  

    <TableRow
        android:id="@+id/linha5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <CheckBox
        android:id="@+id/cbEnviarSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviarSms"/>
    </TableRow>

    <TableRow
        android:id="@+id/linha6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    <Button
        android:id="@+id/btEsqueciSenhaGrupo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/btLembrarSenhaGrupo"
        android:onClick="evtBtEnviarSenha"
        android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </TableRow>

    <TextView
        android:id="@+id/LembreteDeSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"       
        />

</TableLayout>
