<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.PartidasMesActivity" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_id_partida"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Id: "
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_data_partida"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Data: "
            android:textStyle="bold" />
    </TableRow>



    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingTop="2dp"
        android:layout_weight="1">
        <RadioButton
            android:id="@+id/rb_edit_partida_gato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4 x 0"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"/>
        <RadioButton
            android:id="@+id/rb_edit_partida_pts_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 x 0"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"/>

        <RadioButton
            android:id="@+id/rb_edit_partida_pts_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Outro"
            android:checked="true"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"/>

        <Button
            android:id="@+id/bt_edit_partida"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/desc_activity_edit_partida" />
    </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_won"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_won"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_lose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title_lose"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cb_won1_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Vencedor 1" />

        <CheckBox
            android:id="@+id/cb_lose1_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Perdedor 1" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cb_won2_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Vencedor 2" />

        <CheckBox
            android:id="@+id/cb_lose2_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Perdedor 2" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cb_won3_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Vencedor 3" />

        <CheckBox
            android:id="@+id/cb_lose3_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Perdedor 3" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cb_won4_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Vencedor 4" />

        <CheckBox
            android:id="@+id/cb_lose4_edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Perdedor 4" />

    </TableRow>
</LinearLayout>